--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,3 +1,21 @@
 ja:
- name: 名前
- email: メールアドレス
+  activerecord:
+    errors:
+      messages:
+        record_invalid: 'バリデーションに失敗しました: %{errors}'
+        restrict_dependent_destroy:
+          has_one: "%{record}が存在しているので削除できません"
+          has_many: "%{record}が存在しているので削除できません"
+    attributes:
+      user:
+        name: 名前
+        email: メールアドレス
+        birth_date: 年齢
+        sex: 性別
+        school: 学校名
+        admin: 管理者権限
+        password: パスワード
+        password_confirmation: パスワード（確認）
+        created_at: 登録日時
+        updated_at: 更新日時
+        remember_me: ログインを記憶する
