--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       user: ユーザー
+      address: 住所
     attributes:
       user:
         nickname: ニックネーム
@@ -15,3 +16,14 @@ ja:
         birthday_month: 月
         birthday_day: 日
         phonenumber: 電話番号
+      address:
+        lastname: 姓
+        firstname: 名
+        lastname_kana: 姓カナ
+        firstname_kana: 名カナ
+        postcode: 郵便番号
+        prefectures: 都道府県
+        city: 市区町村
+        street_num: 番地
+        building: 建物名
+        home_call_num: 電話
